Fix dropdown bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,8 @@ textarea {
   border: none;
   border-radius: 5px;
   background-color: #eff0f1;
-  padding: 1.2rem;
+  padding-left: .4rem;
+  padding-right: 1.2rem;
   transition: box-shadow .6s;
 }
 
